namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: login-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: front-end-namespace
