login-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-db-deployment
  namespace: login-namespace
  labels:
    app: login-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-db
  template:
    metadata:
      labels:
        app: login-db
    spec:
      containers:
      - name: login-db
        image: postgres
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: login-db-service
  namespace: login-namespace
spec:
  selector:
    app: login-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
