login-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-server-deployment
  namespace: login-namespace
  labels:
    app: login-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-server
  template:
    metadata:
      labels:
        app: login-server
    spec:
      containers:
      - name: login-server
        image: login-server:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /login/health
            port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: login-server-service
  namespace: login-namespace
spec:
  selector:
    app: login-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30008
