ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trascendence-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              number: 3000
      - path: /elasticsearch
        pathType: Prefix
        backend:
          service:
            name: quickstart-es-http
            port:
              number: 9200
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
